--- a/Actividad 3 JS Diego/pokemon.html
+++ b/Actividad 3 JS Diego/pokemon.html
@@ -48,11 +48,55 @@
     </div>
 
     <div class="container">
-      <div class="row text-center">
-        <h3 class="mb-3">Bulbasaur</h3>
-        <img src="img/bulbasaur.png" alt="Pokedex" style="width: 30% !important;" class="bg-pokemon rounded-3 m-auto img-fluid">
-        <h4 class="mt-1">N° 001</h4>
-        
+      <div class="row">
+        <h2 class="mb-5 text-center">Bulbasaur N° 001</h2>
+        <div class="col-sm-6 w-50 text-center">
+          <img src="img/bulbasaur.png" alt="Pokedex" class="bg-pokemon rounded-3 m-auto img-fluid">
+          <br>
+          <h3 class="mt-4">Estadisticas</h3>
+          <ul>
+            <li>HP</li>
+            <li>Ataque</li>
+            <li>Defensa</li>
+            <li>Ataque ESP</li>
+            <li>Defensa ESP</li>
+            <li>Velocidad</li>
+          </ul>
+        </div>
+
+        <div class="col-sm-6">
+          <div class="row">
+            <div class="container bg-primary text-light p-4 rounded-3">
+              <div class="row">
+                <div class="col-sm-6">Altura</div>
+                <div class="col-sm-6">Categoria</div>
+              </div>
+              <div class="row">
+                <div class="col-sm-6">0,7M</div>
+                <div class="col-sm-6">SEMILLA</div>
+              </div>
+              <br>
+              <div class="row">
+                <div class="col-sm-6">Peso</div>
+                <div class="col-sm-6">Habilidad</div>
+              </div>
+              <div class="row">
+                <div class="col-sm-6">6,9KG</div>
+                <div class="col-sm-6">ESPESURA</div>
+              </div>
+              <br>
+              <div class="row">
+                <div class="col-sm-6">GENÉRO</div>
+                <div class="col-sm-6">MACHO Y HEMBRA</div>
+              </div>
+            </div>
+          </div>
+          <div class="row mt-3">
+            <h3 class="mb-3">Tipo</h3>
+            <br>
+            <h6><span class="bg-grass pt-1 pb-1 ps-5 pe-5 rounded-3">Planta</span><span class="ms-4 bg-poison pt-1 pb-1 ps-5 pe-5 rounded-3">Veneno</span></h6>
+          </div>
+        </div>
       </div>
     </div>
   </div>
