--- a/Actividad 3 JS Diego/index.html
+++ b/Actividad 3 JS Diego/index.html
@@ -20,7 +20,7 @@
 
   <nav id='navbar' class="navbar">
     <div class="container-fluid">
-      <a id="dark-label" class="navbar-brand">
+      <a id="dark-label" class="navbar-brand" href="index.html">
         <img src="img/icons8-pokeball-48.png" alt="" width="50" height="50" class="d-inline-block">
         <span id="dark-label">Pokédex</span>
       </a>
@@ -56,6 +56,7 @@
           <div></div>
         </div>
       </div>
+      
 
       <button class="btn btn-primary w-100 mt-5" onclick="scanPokemon()">
         <img src="img/icons8-pokeball-48.png" alt="">
