--- a/Actividad 3 JS Diego/pokemon.html
+++ b/Actividad 3 JS Diego/pokemon.html
@@ -195,8 +195,17 @@
       </div>
 
       <div class="container mt-5 m-auto text-center" id="moves">
-        <table class="table">
-          
+        <h3 class="text-center">Tabla de movimientos</h3>
+        <table class="table" id="moves-table">
+          <thead>
+            <tr>
+              <th scope="col">Movimiento</th>
+              <th scope="col">Poder</th>
+              <th scope="col">PP</th>
+            </tr>
+          </thead>
+          <tbody id="movesInfo">
+          </tbody>
         </table>
       </div>
     </div>
